# sisyphus-ffmpeg

./: .gitignore  README.md  ffmpeg.py  ffprobe.py  pyproject.toml  test.json  test.py  test2.json
schema/: ffmpeg.schema.json
